--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tmpl
@@ -417,15 +417,8 @@ function unHideSubfield(index,labelindex) { // FIXME :: is it used ?
 
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 
-<!--TMPL_UNLESS Name="popup"-->
-    <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
-<!--/TMPL_UNLESS-->
-
-<div id="doc3" class="yui-t2">
-   
+<div id="doc3">
    <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
 
 <!--TMPL_IF Name="done"-->
     <script type="text/javascript">
@@ -559,8 +552,5 @@ function unHideSubfield(index,labelindex) { // FIXME :: is it used ?
 </form>
 
 </div>
-</div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
