--- a/koha-tmpl/intranet-tmpl/prog/en/modules/auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/auth.tmpl
@@ -12,7 +12,6 @@
 
 <div id="doc" class="yui-t7">
    <div id="bd">
-	<div class="yui-g">
 
 <div id="login">
 <h1><a href="http://koha.org">Koha</a></h1>
@@ -38,7 +37,7 @@
     <input type="hidden" name="<!-- TMPL_VAR NAME="name" -->" value="<!-- TMPL_VAR NAME="value" -->" />
 <!-- /TMPL_LOOP -->
 <p><label>Username:<br />
-<input type="text" name="userid" id="userid" class="input" value="<!-- TMPL_VAR NAME="userid" -->" size="20" tabindex="1" /></label>
+<input type="text" name="userid" id="userid" class="input focus" value="<!-- TMPL_VAR NAME="userid" -->" size="20" tabindex="1" /></label>
 </p>
 <p><label>Password:<br />
 <input type="password" name="password" id="password" class="input" value="" size="20" tabindex="2" /></label>
@@ -61,12 +60,5 @@
 
 </div>
 </div>
-</div>
-
-<script type="text/javascript">
-// <![CDATA[
-    document.getElementById('userid').focus(); // auto focus on login input when document is loaded.
-// ]]>
-</script>
 
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
