Removing script-specified CSS and js pointers. More markup cleanup and restructuring.
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/lib/jquery/plugins/jquery.tabs.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/lib/jquery/plugins/jquery.tabs.css
@@ -39,7 +39,7 @@
 .tabs-nav a {
     position: relative;
     top: 1px;
-    z-index: 2;
+    /*z-index: 2;*/
     white-space: nowrap; /* required in IE 6 */    
 }
 .tabs-nav .tabs-selected a {
