--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbooks.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbooks.tmpl
@@ -10,7 +10,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 	<h1>Koha &rsaquo; Catalogue Maintenance</h1>
 	<!-- TMPL_IF name="noitemsfound" -->
@@ -23,7 +23,7 @@
 		<p>
         <label for="q">Search the catalog: </label>
         <input id="q" type="text"  size="25" name="q" class="focus" />
-        <input type="submit" value="search" />
+        <input type="submit" value="Search" />
         </p>
 	</form>
 </div>
@@ -171,5 +171,4 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
