--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
@@ -40,33 +40,34 @@ function confirm_deletion(count) {
 	<div id="yui-main">
 	<div class="yui-b">
 
-    <h1><!-- TMPL_VAR NAME="title" --> <!-- TMPL_IF NAME="author" -->(<!-- TMPL_VAR NAME="author" -->)<!-- /TMPL_IF --> <!-- TMPL_VAR NAME="class" --></h1>
+    <h1></h1>
     
 <!-- TMPL_INCLUDE NAME="action-catalogue.inc" -->
     
     <div id="catalogue_detail_biblio">
         <h2>Biblio detail</h2>
-        <!-- TMPL_IF name="subtitles" -->
-            <p><label><b>Subtitle(s):</b></label>
-                <!-- TMPL_LOOP name="subtitles" -->
-                    <!-- TMPL_VAR NAME="subtitle" --> ;
-                <!-- /TMPL_LOOP -->
-                &nbsp;
-            </p>
-        <!-- /TMPL_IF -->
-        <!-- TMPL_IF name="author" -->
-            <p><label><b>Author: </b></label>
-                <a href="/cgi-bin/koha/catalogue/search.pl?q=au:<!-- TMPL_VAR NAME="author" -->">
-                    <!-- TMPL_VAR NAME="author" -->&nbsp;
-                </a>
-            </p>
-        <!-- /TMPL_IF -->
+        <p>
+            <label><b>Title</b></label>
+            <!-- TMPL_VAR NAME="title" -->
+            [
+            <!-- TMPL_IF name="description" -->
+                <!-- TMPL_VAR name="description" -->
+            <!-- TMPL_ELSE -->
+                <!-- TMPL_VAR NAME="itemtype" -->
+            <!-- /TMPL_IF -->
+            ]
+            <!-- TMPL_IF name="volume" -->, <!-- TMPL_VAR name="volume" --><!-- /TMPL_IF -->
+            <!-- TMPL_IF name="volumedesc" -->, <!-- TMPL_VAR name="volumedesc" --><!-- /TMPL_IF -->
+            <!-- TMPL_IF name="unititle" -->, <!-- TMPL_VAR name="unititle" --><!-- /TMPL_IF -->
+            / <!-- TMPL_VAR NAME="author" --> <!-- TMPL_VAR NAME="class" -->
+        </p>
+
         <!-- TMPL_IF name="MARCAUTHORS" -->
-            <p><label><b>Additional Author:</b></label>
+            <p><label><b>Authors:</b></label>
                 <!-- TMPL_LOOP NAME="MARCAUTHORS" -->
-                <a href="/cgi-bin/koha/catalogue/search.pl?q=Koha-Auth-Number:<!-- TMPL_VAR NAME="link" -->">
+                <p><a href="/cgi-bin/koha/catalogue/search.pl?q=Koha-Auth-Number:<!-- TMPL_VAR NAME="link" -->">
                     <!-- TMPL_VAR NAME="value" -->
-                </a>&nbsp;
+                </a>&nbsp;</p>
                 <!-- /TMPL_LOOP -->
             </p>
         <!-- /TMPL_IF -->
@@ -81,10 +82,10 @@ function confirm_deletion(count) {
             </p>
         <!-- /TMPL_IF -->
         <!-- TMPL_IF name="publicationyear" -->
-            <p><label><b>in</b></label><!-- TMPL_VAR NAME="publicationyear" -->&nbsp;</p>
+            <p><label><b>in:</b></label><!-- TMPL_VAR NAME="publicationyear" -->&nbsp;</p>
         <!-- /TMPL_IF -->
         <p>
-            <label>&nbsp;</label>
+            <label><b>Description:</b></label>
                 <!-- TMPL_IF name="pages" --> <!-- /TMPL_IF --><!-- TMPL_VAR name="pages" -->
                 <!-- TMPL_IF name="size" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="size" -->&nbsp;
         </p>
@@ -94,19 +95,17 @@ function confirm_deletion(count) {
         <!-- TMPL_IF name="issn" -->
             <p><label><b>ISSN:</b></label><!-- TMPL_VAR NAME="issn" -->&nbsp;</p>
         <!-- /TMPL_IF -->
-        <!-- TMPL_IF name="seriestitle" -->
+        <!-- TMPL_IF name="collectiontitle" -->
             <p><label><b>Collection: </b></label>
-                <!-- TMPL_VAR NAME="seriestitle" --> 
-                <!-- TMPL_IF name="volume" -->vol. <!-- TMPL_VAR name="volume" --> <!-- TMPL_VAR name="volumedate" --><!-- /TMPL_IF -->
-                <!-- TMPL_VAR name="volumedesc" -->&nbsp;
+                <!-- TMPL_VAR NAME="collectiontitle" --> <!-- TMPL_IF name="collectionvolume" -->, <!-- TMPL_VAR NAME="collectionvolume" --><!-- /TMPL_IF --><!-- TMPL_IF name="collectionissn" -->(ISSN : <!-- TMPL_VAR NAME="collectionissn" -->)<!-- /TMPL_IF -->
             </p>
         <!-- /TMPL_IF -->
         <!-- TMPL_IF name="MARCSUBJCTS" -->
             <p><label><b>Subjects: </b></label></p>
             <p>
                 <!-- TMPL_LOOP NAME="MARCSUBJCTS" -->
-                    <a href="/cgi-bin/koha/catalogue/search.pl?q=<!-- TMPL_VAR NAME="link" ESCAPE="URL"-->"><!-- TMPL_VAR NAME="label" --></a>
-                    &nbsp;
+                    <p><a href="/cgi-bin/koha/catalogue/search.pl?q=<!-- TMPL_VAR NAME="link" ESCAPE="URL"-->"><!-- TMPL_VAR NAME="label" --></a>
+                    &nbsp;</p>
                 <!-- /TMPL_LOOP -->
             </p>
         <!-- /TMPL_IF -->
@@ -141,13 +140,6 @@ function confirm_deletion(count) {
                 <!-- /TMPL_LOOP -->
             </p>
         <!-- /TMPL_IF -->
-        <p><label><b>Item type : </b></label>
-            <!-- TMPL_IF name="description" -->
-                <!-- TMPL_VAR name="description" -->
-            <!-- TMPL_ELSE -->
-                <!-- TMPL_VAR NAME="itemtype" -->
-            <!-- /TMPL_IF -->
-        </p>
     </div>
 
 <!-- TMPL_IF name="count" -->
