Bug Fixing : Year/Number Pattern was buggy.
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-add.tmpl
@@ -154,6 +154,7 @@ var patternchoice = document.getElementById("numberpattern").value;
         document.f.lastvalue3.value='';
         document.f.periodicity.value=1;
         document.f.numberingmethod.value=_('{X}/{Y}');
+        moreoptions(text[16],text[0]);
         display_table(0);
         break;
     default:
