BUGFIX for unimarc 4XX plugin
We don't have to count parentNode, but grand-parentNode

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/unimarc_field_4XX.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/unimarc_field_4XX.tmpl
@@ -19,7 +19,7 @@
                 
                 // browse all its subfields
 
-                var subfields = whichfield.parentNode.getElementsByTagName('input');
+                var subfields = whichfield.parentNode.parentNode.getElementsByTagName('input');
 
                 var re = /^tag_\d*_code_/;
                 for(var i=0, len = subfields.length ; i< len ; i++) {
